fix: Articles with tables with multiple columns and longer spans in cells are overlapping.

--- a/_assets/css/_styles.scss
+++ b/_assets/css/_styles.scss
@@ -1168,6 +1168,7 @@ article {
         width: 100%;
         table-layout: fixed;
         margin: 15px 0 20px;
+        word-break: break-word;
 
         th {
             color: #8a959f;
